--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "fireflywallet-api": "^0.2.0",
     "vconsole": "^3.2.0",
     "vue": "^2.5.2"
   },
