--- a/dapp/vue_demo/package.json
+++ b/dapp/vue_demo/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-plugin-prismjs": "^1.0.2",
     "core-js": "^2.6.5",
     "fireflywallet-api": "^0.2.1",
+    "prismjs": "^1.16.0",
     "vconsole": "^3.3.0",
     "vue": "^2.6.6"
   },
