--- a/dapp/vue_demo/package.json
+++ b/dapp/vue_demo/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-prismjs": "^1.0.2",
     "core-js": "^2.6.5",
     "fireflywallet-api": "^0.2.1",
+    "lib-flexible": "^0.3.2",
     "prismjs": "^1.16.0",
     "vconsole": "^3.3.0",
     "vue": "^2.6.6"
